Fix dockerfile to install python gdp bindings

--- a/gdpfs-docker/Makefile
+++ b/gdpfs-docker/Makefile
@@ -22,3 +22,6 @@ gdpfs_hhcc_challenge:
 	cat Dockerfile.template >> Dockerfile
 	docker build -t $@ .
 	rm -f Dockerfile
+
+clean:
+	rm -f Dockerfile
