Install both GDP client + Python bindings

--- a/gdpfs-docker/Dockerfile.template
+++ b/gdpfs-docker/Dockerfile.template
@@ -25,7 +25,7 @@ ENV GDP_CREATE_SERVER docker.gdplogd
 ADD . /src
 WORKDIR /src
 
-RUN ./install-gdppy.sh
+RUN ./install-gdp.sh
 RUN ./config-gdp.sh
 
 RUN ./install-protobuf.sh
