--- a/gdpfs-docker/Dockerfile.template
+++ b/gdpfs-docker/Dockerfile.template
@@ -28,7 +28,8 @@ WORKDIR /src
 RUN ./install-gdp.sh
 RUN ./config-gdp.sh
 
-RUN ./install-protobuf.sh
+# RUN ./install-protobuf.sh
+RUN dpkg -i protobuf-dev_3.5.1-1_amd64.deb
 
 RUN ./install-gdpfs.sh
 RUN ./config-gdpfs.sh
